--- a/src/index.css
+++ b/src/index.css
@@ -15,3 +15,17 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+.swiper-button-prev,
+.swiper-button-next {
+  background:white !important;
+  padding:20px !important;
+  font-size: 10px !important;
+  height:40px !important;
+  width:40px !important;
+  border-radius: 50%;
+}
+.swiper-button-prev::after,
+.swiper-button-next::after {
+  font-size: 20px !important;
+  font-weight: bold;
+}
